apps/openedx/overlays/dev/cms-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cms
    namespace: openedx
spec:
    template:
        spec:
            containers:
                - name: cms
            volumes:
                - name: config
                  configMap: null
                  secret:
                      secretName: openedx-settings
                      items:
                          - key: cms.env.json
                            path: cms.env.json
                          - key: lms.env.json
                            path: lms.env.json
