apps/openedx/overlays/dev/lms-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: lms
spec:
    template:
        spec:
            containers:
                - name: lms
            volumes:
                - name: config
                  configMap: null
                  secret:
                      secretName: openedx-settings
