apps/openedx/overlays/dev/worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-placeholder
spec:
    template:
        spec:
            containers:
                - name: lms-worker # Targets lms-worker specifically
                - name: cms-worker # Targets cms-worker specifically
