apps/openedx/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: lms-ingress
    namespace: openedx
    annotations:
        # Traffic Routing
        kubernetes.io/ingress.class: "nginx"

        # TLS / SSL (Cert-Manager)
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"

        # Open edX specific tweaks
        nginx.ingress.kubernetes.io/proxy-body-size: "500m" # Allow large file uploads (videos/scorm)
        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k" # Fixes some large header issues with Django
spec:
    tls:
        - hosts:
              - lms.openedx.uzair.copebit-training.net
              - studio.openedx.uzair.copebit-training.net
              - apps.openedx.uzair.copebit-training.net
          secretName: openedx-tls-secret # Cert-manager will store the cert here

    rules:
        # 1. LMS Routing
        - host: lms.openedx.uzair.copebit-training.net
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: lms
                            port:
                                number: 8000

        # 2. CMS (Studio) Routing
        - host: studio.openedx.uzair.copebit-training.net
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: cms
                            port:
                                number: 8000

        # 3. MFE (Apps) Routing
        - host: apps.openedx.uzair.copebit-training.net
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: mfe
                            port:
                                number: 8002
